--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.liquibase.ext</groupId>
 	<artifactId>liquibase-filechangelog</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<name>Liquibase File Based Changelog Extension</name>
 	<description>Liquibase extension to use a local file rather than a database table to track executed changeSets</description>
