test different fomat
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/.github/workflows/pull-request-labeled-closed.yml
+++ b/.github/workflows/pull-request-labeled-closed.yml
@@ -9,10 +9,7 @@ jobs:
   build:
     name: Build Artifact
     runs-on: ubuntu-latest
-    if: |
-      ${{ github.ref == 'main' }} &&
-      ${{ github.event.pull_request.merged }} &&
-      contains( github.event.pull_request.labels.*.name, 'Extension Release Candidate :rocket:' )
+    if: ${{ github.ref == 'main' }} && ${{ github.event.pull_request.merged }} && contains( github.event.pull_request.labels.*.name, 'Extension Release Candidate :rocket:' )
     steps:
       - uses: actions/checkout@v2
       - name: Cache Local Maven Repository
