--- a/.github/workflows/dry-run-release.yml
+++ b/.github/workflows/dry-run-release.yml
@@ -7,6 +7,6 @@ on:
     - cron: "0 6 * * 3"
 
 jobs:
-    nightly-build:
+    dry-run-release:
       uses: liquibase/build-logic/.github/workflows/extension-dry-run.yml@DAT-18303
       secrets: inherit
