🔧 (dry-run-release.yml): update workflow dependencies to include dry-run-get-draft-release job for proper workflow execution

--- a/.github/workflows/dry-run-release.yml
+++ b/.github/workflows/dry-run-release.yml
@@ -50,7 +50,7 @@ jobs:
    cleanup:
     runs-on: ubuntu-latest
     if: always()
-    needs: [ dry-run-release-published ]
+    needs: [ dry-run-get-draft-release, dry-run-release-published ]
     steps:
       - name: Checkout liquibase
         uses: actions/checkout@v4
