--- a/.github/workflows/dry-run-release.yml
+++ b/.github/workflows/dry-run-release.yml
@@ -74,19 +74,19 @@ jobs:
                 -H "Accept: application/vnd.github.v3+json" \
                 "https://api.github.com/repos/${{ github.repository }}/releases/${{ needs.dry-run-get-draft-release.outputs.dry_run_release_id }}"
                 
-  #  notify:
-  #   if: failure()
-  #   runs-on: ubuntu-latest
-  #   needs: [ setup, dry-run-create-release, dry-run-get-draft-release, dry-run-release-published, cleanup ]
-  #   steps:
-  #     - name: Notify Slack on Build Failure
-  #       uses: rtCamp/action-slack-notify@v2
-  #       env:
-  #         SLACK_COLOR: ${{ job.status }}
-  #         SLACK_MESSAGE: "View details on GitHub Actions: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_number }} <@S056Q5RG38F>"
-  #         SLACK_TITLE: "❌ ${{ github.repository }} ❌ Build failed on branch ${{ github.ref }} for commit ${{ github.sha }} in repository ${{github.repository}}"
-  #         SLACK_USERNAME: liquibot
-  #         SLACK_WEBHOOK: ${{ secrets.DRY_RUN_RELEASE_SLACK_WEBHOOK }}
-  #         SLACK_ICON_EMOJI: ":robot_face:"
-  #         SLACK_FOOTER: "${{ github.repository }}"
-  #         SLACK_LINK_NAMES: true
+   notify:
+    if: failure()
+    runs-on: ubuntu-latest
+    needs: [ dry-run-attach-artifact-to-release, dry-run-get-draft-release, dry-run-release-published, cleanup ]
+    steps:
+      - name: Notify Slack on Build Failure
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_MESSAGE: "View details on GitHub Actions: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_number }} <@S056Q5RG38F>"
+          SLACK_TITLE: "❌ ${{ github.repository }} ❌ Build failed on branch ${{ github.ref }} for commit ${{ github.sha }} in repository ${{github.repository}}"
+          SLACK_USERNAME: liquibot
+          SLACK_WEBHOOK: ${{ secrets.DRY_RUN_RELEASE_SLACK_WEBHOOK }}
+          SLACK_ICON_EMOJI: ":robot_face:"
+          SLACK_FOOTER: "${{ github.repository }}"
+          SLACK_LINK_NAMES: true
